# context-free-fun

./: .firebaserc  LICENSE  README.md  angular.json  context-free-fun.cabal  default.nix  karma.conf.js  package-lock.json  package.json  result
e2e/src/: app.e2e-spec.ts
src/: Main.hs  index.html  styles.scss
src/app/: app-routing.module.ts  app.component.html  app.component.scss  app.component.spec.ts  app.component.ts  app.module.ts
src/app/grammar-playground/: grammar-playground.component.html  grammar-playground.component.scss  grammar-playground.component.ts
