name:                context-free-fun
version:             0.1.0.0
synopsis:            Formal languages frontend-only web app
category:            Web
build-type:          Simple
cabal-version:       >=1.10

executable context-free-fun
  hs-source-dirs:      src
  main-is:             Main.hs
  ghcjs-options:
    -dedupe
  build-depends:       base, miso
  default-language:    Haskell2010
